--- a/.github/workflows/docker-actions.yml
+++ b/.github/workflows/docker-actions.yml
@@ -10,4 +10,4 @@ jobs:
       with:
         name: myDocker/repository
         username: ${{ secrets.spidi001 }}
-        password: ${{ secrets.h2D4a6T9i03n1V5. }}
+        password: ${{ secrets.h2D4a6T9i03n1V5 }}
