--- a/.github/workflows/docker-actions.yml
+++ b/.github/workflows/docker-actions.yml
@@ -8,6 +8,6 @@ jobs:
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@master
       with:
-        name: myDocker/repository
-        username: ${{ with.spidi001 }}
+        name: spidi001/java-jersey-rest
+        username: ${{ secrets.spidi001 }}
         password: ${{ secrets.h2D4a6T9i03n1V5 }}
