--- a/.github/workflows/docker-actions.yml
+++ b/.github/workflows/docker-actions.yml
@@ -4,14 +4,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Build and push Docker images
+      ‐ name: build-push
         uses: docker/build-push-action@v1
         with:
-          username: ${{ secrets.spidi001 }}
-          password: ${{ secrets.h2D4a6T9i03n1V5 }}
-          repository: spidi001/java-jersey-rest 
+          username: ${{ spidi001 }}
+          password: ${{ h2D4a6T9i03n1V5 }}
+          registry: myregistry
+          repository: spidi001/java-jersey
+          tags: v1		
           
 
