--- a/.github/workflows/docker-actions.yml
+++ b/.github/workflows/docker-actions.yml
@@ -13,4 +13,4 @@ jobs:
           username: ${{ secrets.spidi001 }}
           password: ${{ secrets.h2D4a6T9i03n1V5 }}
           repository: spidi001/java-jersey-rest
-          tag_with_ref: true
+          tag: latest
